--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 edition = "2018"
 authors = ["The Mudcano Project"]
 license = "LGPL-3.0-or-later"
-repository = "https://github.com/mudcano/telnet-codec"
+repository = "https://github.com/mudcano/mutelnet"
 description = """
 A simple library for handling TelnetEvents from telnet-codec
 """
@@ -15,5 +15,5 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-telnet-codec = "0.1.0"
+telnet-codec = "0.1"
 bytes = "1.0"
